--- a/src/assets/styles/Header.css
+++ b/src/assets/styles/Header.css
@@ -2,22 +2,21 @@
 .navbar {
     position: fixed;
     top: 0;
-    background-color: #000;
+    background-color: trasparent;
     width: 100%;
-    height: 100px;
+    height: 120px;
    /*  padding-left: 50px; */
     font-size: 20px;
     z-index: 1;
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-evenly;
-    box-shadow: 0 4px 30px #111;
+    justify-content: space-between;
   }
   
   .scrolling {
-    background: #fff;
-    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    background: #000;
+    box-shadow: 0 4px 30px #111;
     backdrop-filter: blur(5px);
     -webkit-backdrop-filter: blur(5px);
     transition: all 0.8s ease;
@@ -31,6 +30,7 @@
     line-height: 80px;
     color: white;
     cursor: pointer;
+    margin-left: 60px;
   }
 
   .navbar-logo img {
@@ -45,6 +45,7 @@
     align-items: center;
     justify-content: space-around;
     cursor: pointer;
+    margin-right: 60px;
   }
   
   .navbar-menu h5 {
@@ -70,20 +71,30 @@
   
   @media screen and (max-width: 960px) {
     .navbar {
-      position: fixed;
-      top: 0;
-      background-color: #000;
-      width: 100%;
-      height: 100px;
-      /* padding-left: 50px; */
-      font-size: 20px;
-      z-index: 1;
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-      justify-content: center;
-      box-shadow: 0 4px 30px #111;
-    }
+    position: fixed;
+    top: 0;
+    background-color: trasparent;
+    width: 100%;
+    height: 120px;
+   /*  padding-left: 50px; */
+    font-size: 20px;
+    z-index: 1;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+  }
+
+  .navbar-logo {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    line-height: 80px;
+    color: white;
+    cursor: pointer;
+    margin-left: 0px;
+  }
+
     .navbar-menu {
       display: none;
     }
